# promptaudit

./: .gitignore  README.md  promptaudit.py  pyproject.toml  test_promptaudit.py
examples/: safe_app.py  vulnerable_app.py
