[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "promptaudit"
version = "0.1.0"
description = "LLM Prompt Injection & Security Scanner — find prompt injection, unsafe output handling, and AI security issues. Zero deps."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Kris Kimmerle"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
keywords = ["llm", "prompt-injection", "security", "ai", "audit", "openai", "langchain"]

[project.scripts]
promptaudit = "promptaudit:main"

[project.urls]
Homepage = "https://github.com/kriskimmerle/promptaudit"
Repository = "https://github.com/kriskimmerle/promptaudit"
Issues = "https://github.com/kriskimmerle/promptaudit/issues"
